--- a/WaiterApp/Support/Info.plist
+++ b/WaiterApp/Support/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
